--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ Flask-Excel==0.0.7
 Flask-MySQL==1.5.2
 Flask-Session==0.8.0
 gTTS==2.5.3
+gunicorn==23.0.0
 idna==3.7
 ipykernel==6.22.0
 ipython==8.12.0
